@@ -1,5 +1,11 @@
 LIST OF CHANGES
 
+ - Switched the default LIMS driver in samplesheet generation from 'xml'
+   to 'ml_warehouse'.
+ - Added 'lims_driver_type' attribute to npg::samplesheet.
+ - Updated the tests for samplesheet generation, which are using the xml
+   LIMS driver, to set the driver type explicitly.
+
 release 96.0.0
  - Fixed a regression in the npg_move_runfolder script,
    which made it unusable.
